Mon Dec 10 16:20:53 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: when number of digits of labels is too much
	  use the scientific notation.  Avoids ugly huge numbers.
	  Also make the graph slightly bigger (700x500) and in lineplot mode
	  make the margins bigger so that we don't lose any digits on axes
	  when zooming out or in.  Also fixup labels for gradient.  Gradient
	  is now done only for the range of the function not the whole range
	  that makes it more useful.

	* gtkextra/gtkplot.c, gtkextra/gtkplot3d.c, gtkextra/gtkplotsurface.c:
	  minor cleanup and fix crash when labels too big.  Also fix gradient
	  label style settings, and zero out data we just freed.

Fri Dec 07 21:36:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, src/gnome-genius.c: kill our own overwrite dialog
	  since gtk does it already.  Also when no last dir, set current
	  directory in the file chooser, because the current default 
	  behaviour is godawfully annoying.  I can always click on "Recent",
	  but getting to "current working directory" can be quite a chore.

Fri Dec 07 17:21:26 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, help/C/gel-function-list.xml: add ExportPlot
	  function

Fri Dec 07 00:27:33 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml: add
	  doc for new functions.  Also add details in bits of the docs,
	  they really still need lots of love.

Thu Dec 06 12:03:12 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotDrawGrid to draw data directly from
	  grid to avoid having to make up a data matrix

	* src/graphing.c, gtkextra/gtkplotcanvas.c: Fix flicker during
	  surface animations by properly freezing the display and also
	  letting the painting happen at the right time.

Tue Dec 04 23:31:30 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: some cleanup with respect to fitting dependent