@@ -1,3 +1,9 @@
+Mon Dec 10 20:58:42 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: add ability to fit dependent axis automatically
+	  for surface plots.  When z is not specified by x and y limits are
+	  specified for surface plot functions, z is figured out
+
 Mon Dec 10 16:20:53 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: when number of digits of labels is too much
